--- a/css/ultimate.css
+++ b/css/ultimate.css
@@ -1437,6 +1437,86 @@ header .container .links li:nth-of-type(4):hover .mega-menu {
   background-color: white;
   padding: 20px;
 }
+
+.stats {
+  padding-top: var(--main-padding);
+  padding-bottom: var(--main-padding);
+  background-image: url(../images/stats.jpg);
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+}
+
+.stats::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.95);
+  z-index: -1;
+}
+
+.stats .title h1{
+  width: fit-content;
+  margin: 0 auto 40px;
+  font-size: 40px;
+}
+
+.stats .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.stats .container .stat {
+  background-color: white;
+  text-align: center;
+  padding: 30px;
+  position: relative;
+  cursor: default;
+}
+
+.stats .container .stat::before,
+.stats .container .stat::after {
+  content: "";
+  position: absolute;
+  background-color: var(--main-color);
+  width: 2px;
+  height: 0;
+  transition: 0.8s;
+}
+
+.stats .container .stat::before {
+  left: 0;
+  bottom: 0;
+}
+
+.stats .container .stat::after {
+  right: 0;
+  top: 0;
+}
+
+.stats .container .stat:hover::before,
+.stats .container .stat:hover::after {
+  height: 100%;
+}
+
+.stats .container .stat i {
+  font-size: 36px;
+}
+
+.stats .container .stat h1 {
+  font-size: 48px;
+  margin: 10px;
+}
+
+.stats .container .stat h4 {
+  font-size: 19px;
+  color: var(--main-color);
+  font-style: italic;
+}
 /* End Local Rules */
 
 
