--- a/css/ultimate.css
+++ b/css/ultimate.css
@@ -1517,6 +1517,130 @@ header .container .links li:nth-of-type(4):hover .mega-menu {
   color: var(--main-color);
   font-style: italic;
 }
+
+.discount .flex {
+  display: flex;
+}
+
+.discount .flex .page{
+  padding-bottom: calc(var(--main-padding) + 80px);
+  padding-top: calc(var(--main-padding) + 80px);
+  flex-basis: 50%;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.discount .flex .page:first-of-type {
+  text-align: center;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: url(../images/discount-background1.jpg);
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+  animation: change-background 10s linear infinite; 
+}
+
+@keyframes change-background {
+  0%, 50% {
+    background-image: url(../images/discount-background1.jpg);
+  }
+
+  100% {
+    background-image: url(../images/discount-background2.jpg);
+  }
+}
+
+.discount .flex .page:first-of-type::before {
+  content: "";
+  position: absolute;
+  background-color: var(--main-color-alt);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.98;
+}
+
+.discount .flex .page:first-of-type .info {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.discount .flex .page:first-of-type h1 {
+  font-size: 40px;
+  letter-spacing: -2px;
+}
+
+.discount .flex .page:first-of-type p {
+  line-height: 1.6;
+  font-size: 18px;
+}
+
+.discount .flex .page:first-of-type .image {
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  margin-top: 10px;
+}
+
+.discount .flex .page:first-of-type .image img {
+  max-width: 100%;
+}
+
+.discount .flex .page:last-of-type {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.discount .flex .page:last-of-type h1 {
+  font-size: 40px;
+  letter-spacing: -2px;
+}
+
+.discount .flex .page:last-of-type form {
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.discount .flex .page:last-of-type input,
+.discount .flex .page:last-of-type textarea {
+  display: block;
+  width: 100%;
+  padding: 15px;
+  background-color: #f7f7f7;
+  border: none;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #c1c1c1;
+  outline: none;
+  caret-color: var(--main-color);
+}
+
+.discount .flex .page:last-of-type textarea {
+  height: 200px;
+  resize: none;
+}
+
+.discount .flex .page:last-of-type input[type="submit"] {
+  color: white;
+  background-color: var(--main-color);
+  font-weight: bold;
+  font-size: 21px;
+  transition: var(--main-trans);
+  cursor: pointer;
+}
+
+.discount .flex .page:last-of-type input[type="submit"]:hover {
+  background-color: var(--main-color-alt);
+}
 /* End Local Rules */
 
 
@@ -1600,6 +1724,11 @@ header .container .links li:nth-of-type(4):hover .mega-menu {
   .top-videos .container {
     flex-direction: column;
   }
+
+  .discount .flex {
+    flex-direction: column;
+  }
+
 }
 
 @media (width <= 769px) {
@@ -1686,6 +1815,12 @@ header .container .links li:nth-of-type(4):hover .mega-menu {
   .top-videos .container {
     width: calc(100% - 30px);
   }
+
+  .discount .flex .page{
+    padding-bottom: 80px;
+    padding-top: 80px;
+  }
+
 }
 
 @media (width <= 450px) {
