--- a/css/ultimate.css
+++ b/css/ultimate.css
@@ -19,6 +19,46 @@
 
 
 /* Start Global Rules */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--main-color);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--main-color-alt);
+}
+
+::-webkit-scrollbar-track {
+  background-color: #fafafa;
+}
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 30px;
+  right: 40px;
+  background-color: var(--main-color);
+  color: white;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  align-content: center;
+  border-radius: 50%;
+  transition: var(--main-trans);
+  cursor: pointer;
+  z-index: 100000;
+}
+
+.scroll-to-top:hover {
+  background-color: var(--main-color-alt);
+}
+
+.invisible {
+  opacity: 0;
+}
+
 * {
   margin: 0;
   padding: 0;
